src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_TextInIDictProperty.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel xml:space="preserve"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
>
    <DockPanel.Resources>
	<Button x:Key="Button0" />
	Hi there
    </DockPanel.Resources>
</DockPanel>
</Page>
